# ByBit_Proj

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  AUDIT_REPORT_old.md  CHANGELOG.md  DATABASE_SCHEMA.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  TESTING.md  TESTNET_SETUP.md  alembic.ini  bybit_client.py  check_db_migrations.py  comprehensive_api_test.py  config.py  diagnose_api.py  docker-compose.yml  graph.py  main.py  main_bot.py  manage.sh  models.py  pyproject.toml  server.py  start.sh  test_bybit_api.py
.agents/rules/: AGENTS.md  GEMINI.md
.kilo/plans/: 1778097628774-calm-circuit.md  1778103925144-calm-cactus.md  1778981588313-calm-forest.md  1778993131613-cosmic-mountain.md  1779008123579-proud-falcon.md
.kilocode/: mcp.json
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_fix_schema_issues.py  0bbab6ed847e_add_security_models.py  4ea56e08f368_add_telegram_users_table.py  b5c6ba6a475c_add_screenshothash_table.py
app/: __init__.py  config.py
app/ai_agents/: ai_logger.py  base_agent.py  fraud_analyzer.py  intent_classifier.py  intent_router.py  openrouter_adapter.py  payment_parser.py  response_generator.py
app/api/: auth.py
app/core/: __init__.py  auth.py  deps.py  logging_config.py  rate_limit.py  schemas.py  (+2 more)
docker/: Dockerfile  Dockerfile.bot
docs/: api.md  architecture.md  index.md  overview.md  roadmap.md  setup.md  stack.md  status.md
scripts/: backup_db.sh  cron_backup.sh  setup.sh
static/: style.css
templates/: index.html
tests/: conftest.py
(+54 files in other folders)
