[project]
name = "bybit-p2p-automation"
version = "2.1.0"
description = "Full P2P trading automation with AI agents and enhanced Telegram interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "websockets>=14.1",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "bybit-p2p>=1.0.0",
    "python-telegram-bot>=21.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "together>=1.0.0",
    "mistralai>=0.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "loguru>=0.7.0",
    "tenacity>=8.0.0",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "app/**",
    "frontend/**",
]
